--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "author": "xueping.yang@gmail.com",
   "dependencies": {
-    "koa": "^1.2.0"
+    "koa": "^1.2.0",
+    "koa-route": "^2.4.2",
+    "redis": "^2.5.3"
   }
 }
