--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "author": "xueping.yang@gmail.com",
   "dependencies": {
+    "co-body": "^4.2.0",
     "koa": "^1.2.0",
     "koa-route": "^2.4.2",
     "lodash": "^4.12.0",
-    "redis": "^2.5.3"
+    "redis": "^2.5.3",
+    "request": "^2.72.0"
   }
 }
