--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "author": "xueping.yang@gmail.com",
   "dependencies": {
-    "co-body": "^4.2.0",
     "koa": "^1.2.0",
+    "koa-bodyparser": "^2.1.0",
     "koa-route": "^2.4.2",
     "lodash": "^4.12.0",
     "redis": "^2.5.3",
