--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "script": {
+    "start": "node index.js"
+  },
   "author": "xueping.yang@gmail.com",
   "dependencies": {
     "koa": "^1.2.0",
